--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>eureka-server</module>
         <module>config-server</module>
         <module>api-gateway</module>
+        <module>weather-collector</module>
     </modules>
 
     <properties>
