--- a/data-consumer-to-db/src/main/resources/application.yml
+++ b/data-consumer-to-db/src/main/resources/application.yml
@@ -2,5 +2,6 @@ spring:
   application:
     name: data-consumer-to-db
   config:
-    import: configserver:http://localhost:8888
+#    import: configserver:http://localhost:8888
+    import: configserver:http://config-server:8888 # for docker
 
