--- a/data-rest/src/test/resources/application.yml
+++ b/data-rest/src/test/resources/application.yml
@@ -15,6 +15,9 @@ eureka:
     enabled: false
 
 security:
+  default-user:
+    username: "user"
+    password: "user"
   jwt:
     requestHeader: authorization
     secretKey: mySecretKey-mySecretKey-mySecretKey
