--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -2,4 +2,5 @@ spring:
   application:
     name: eserver
   config:
-    import: configserver:http://localhost:8888
+#    import: configserver:http://localhost:8888
+    import: configserver:http://config-server:8888 # for docker
