kubernetes manifest files are added

--- a/config-server/Dockerfile
+++ b/config-server/Dockerfile
@@ -11,3 +11,4 @@ ENTRYPOINT ["java", "-jar", "app.jar"]
 
 # Run:
 #   'docker build -t config-server-image .'
+#   or 'docker build -t ivangorbunovv/spring-cloud-weather-forecasting:config-server .'
