--- a/eureka-server/Dockerfile
+++ b/eureka-server/Dockerfile
@@ -10,3 +10,4 @@ ENTRYPOINT ["java", "-jar", "app.jar"]
 
 # Run:
 #   'docker build -t eureka-server-image .'
+#   or 'docker build -t ivangorbunovv/spring-cloud-weather-forecasting:eureka-server .'
